--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "figma-horoscope-widget",
+  "name": "figma-horoscope-widget-demo",
   "version": "1.0.0",
   "description": "Horoscope widget for Figma",
   "scripts": {
